portfolio section flex wrap fix, fix sections of all sections

--- a/src/components/education.css
+++ b/src/components/education.css
@@ -18,10 +18,11 @@
 .education_section_title {
     font-family: 'Montserrat', sans-serif;
     color: rgb(25, 63, 112);
-    background-color: white;
     font-size: 55px;
-    padding: 30px;
+    padding-top: 30px;
+    height: 70px;
     width: 100%;
+    text-align: center;
 }
 
 .education_section_subtitle {
@@ -29,8 +30,10 @@
     color: rgb(25, 63, 112);
     background-color: white;
     font-size: 40px;
-    padding: 34px;
+    padding-top: 30px;
+    height: 70px;
     width: 100%;
+    text-align: center;
 }
 
 p {
