--- a/src/components/portfolio.css
+++ b/src/components/portfolio.css
@@ -1,14 +1,60 @@
+@import url('https://fonts.googleapis.com/css?family=Montserrat:800&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Lato&display=swap');
+
 .portfolio_section {    
     display: flex;
-    align-content: center;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    align-self: center;
-    align-content: stretch;
-    /* height: 100%; */
-    height: 800px;
+    justify-content: space-evenly;
+    align-items: flex-start;
+    align-content: flex-start;
+    height: 100%;
     width: 100%;
-    background-color: rgb(224, 30, 166);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+}
+
+.portfolio_section_title {
+    font-family: 'Montserrat', sans-serif;
+    color: rgb(25, 63, 112);
+    font-size: 55px;
+    padding-top: 30px;
+    height: 70px;
+    width: 100%;
+    text-align: center;
+}
+
+.portfolio_card {
+    background-color: rgba(0, 0, 0, 0.9);
+    border: px solid white;
+    border-radius: 18px;
+    margin: 24px 12px;
+    max-width: 550px;
+    height: 670px;
+}
+
+.portfolio_card_title {
+    font-family: 'Montserrat', sans-serif;;
+    color: white;
+    font-size: 30px;
+    line-height: 1.2;
+    color: white;
+    margin: 24px
+}
+
+.portfolio_content {
+    font-family: 'Lato', sans-serif;
+    color: white;
+    font-size: 16px;
+    line-height: 1.2;
+    margin: 24px;
+}
+
+.portfolio_box_image {
+    margin: 24px;
+    max-width: 480px;
+    border: rgb(12, 12, 12) 2px solid;
+    border-radius: 12px;
 }
